<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3ECF1"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/campaignTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/campaignTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/shortText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/shortText" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="5" />

    <Button
        android:id="@+id/postIdea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/postIdea" 
        android:onClick="postIdea"/>

</LinearLayout>